@@ -8,3 +8,27 @@ repositories {
         url "https://plugins.gradle.org/m2/"
     }
 }
+
+// Enable preview features for Java SE 17
+/*tasks {
+    val ENABLE_PREVIEW = "--enable-preview"
+ 
+
+    withType<JavaCompile>() {
+        options.compilerArgs.add(ENABLE_PREVIEW)
+ 
+        // Optionally we can show which preview feature we use.
+        options.compilerArgs.add("-Xlint:preview")
+ 
+        options.release.set(17)
+    }
+ 
+    withType<Test>() {
+        useJUnitPlatform()
+        jvmArgs.add(ENABLE_PREVIEW)
+    }
+ 
+    withType<JavaExec>() {
+        jvmArgs.add(ENABLE_PREVIEW)
+    }
+}*/
